# motor-sales

./: .editorconfig  .gitignore  Makefile  pyproject.toml
data/clean/: 2023-01-11_Audi_A3.json
motor_sales/: __main__.py
