[tool.poetry]
name = "motor-sales"
version = "0.1.0"
description = ""
authors = ["Kevin Bradwick <kevinbradwick@gmail.com>"]
readme = "README.md"
packages = [{include = "motor_sales"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
selenium = "^4.7.2"
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
fire = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
